--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.1.0",
     "sanitize-html": "^2.3.3"
+  },
+  "scripts": {
+    "start": "nodemon app.js"
   }
 }
